# oauth2-proxy

./: .dockerignore  .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  foo.rs  rustfmt.toml
.github/workflows/: docker-build.yml  release-please.yml  upload-artifacts.yml
src/: api.rs  config.rs  db.rs  errors.rs  frontend.rs  graphql.rs  login.rs  main.rs  route_metrics.rs  routes.rs  templates.rs  token.rs  util.rs
src/actix_web_graphql/: mod.rs
src/db/: helpers.rs
src/graphql/: mutation.rs  provider.rs  query.rs
src/provider/: mod.rs  spotify.rs
src/routes/: api.rs  callback.rs  home.rs  login.rs  register.rs  token.rs
templates/: base.html  home.html  index.html  login.html  new_token.html  redirect.html  register.html  token.html
terraform/: main.tf
