[package]
name = "oauth2-proxy"
version = "0.4.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }

reqwest = { version = "0.11" }

jsonwebtoken = "7.2.0"
bcrypt = "0.10"
oauth2 = "4.1.0"

thiserror = "1.0"

rocket = { version = "0.5.0-rc.1", features = ["json"] }

askama = { git = "https://github.com/djc/askama" }
askama_rocket = { git = "https://github.com/djc/askama" }

rusoto_core = "0.47.0"
nitroglycerin = { version = "0.4.3", features = ["uuid", "chrono", "oauth2"] }

uuid = { version = "0.8", features = ["v4"] }
chrono = "0.4"
base64 = "0.13"
rand = "0.8.4"
