[package]
name = "oauth2-proxy"
version = "0.7.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# tokio = { version = "1.10.1", features = ["full"] }
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.2" }
serde = { version = "1", features = ["derive"] }

reqwest = { version = "0.11" }

jsonwebtoken = "7.2.0"
bcrypt = "0.10"
oauth2 = "4.1.0"
toml = "0.5"

thiserror = "1.0"

actix = "0.12.0"
actix-web = "4.0.0-beta.8"
tracing-actix-web = "0.4.0-beta.10"
async-graphql = { version = "2.9", features = ["tracing", "apollo_tracing", "uuid"] }
# async-graphql-actix-web = "2.9"
# rocket = { version = "0.5.0-rc.1", features = ["json"] }

# askama = { git = "https://github.com/djc/askama" }
# askama_rocket = { git = "https://github.com/djc/askama" }

rusoto_core = "0.47.0"
nitroglycerin = { version = "0.5.0", path = "../nitroglycerin/nitroglycerin" }

uuid = { version = "0.8", features = ["v4"] }
chrono = "0.4"
base64 = "0.13"
rand = "0.8.4"

# metrics = "0.17"
# metrics-exporter-prometheus = "0.6"

futures-util = { version = "0.3.13", default-features = false }
serde_json = "1.0.64"
serde_urlencoded = "0.7.0"
async-channel = "1.6.1"
async-trait = "0.1"
Inflector = "0.11.4"

opentelemetry = { version = "0.16", default-features = false, features = ["trace", "metrics", "rt-tokio"] }
opentelemetry-jaeger = { version = "0.15", features = ["rt-tokio"] }
tracing-opentelemetry = "0.15"
