[package]
name = "oauth2-proxy"
version = "0.7.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }

reqwest = { version = "0.11" }

jsonwebtoken = "7.2.0"
bcrypt = "0.10"
oauth2 = "4.1.0"

thiserror = "1.0"

actix-web = { version = "4.0.0-beta.9" }
figment = "0.10.6"

rusoto_core = "0.47.0"
nitroglycerin = { version = "0.5.0", path = "../nitroglycerin/nitroglycerin" }

uuid = { version = "0.8", features = ["v4"] }
chrono = "0.4"
base64 = "0.13"
rand = "0.8.4"

opentelemetry = { version = "0.16", default-features = false, features = ["trace", "metrics", "rt-tokio"] }
opentelemetry-jaeger = { version = "0.15", features = ["rt-tokio"] }
tracing-opentelemetry = "0.15"
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.2" }
tracing-actix-web = "0.4.0-beta.10"
